--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,7 @@ jobs:
           distribution: "temurin"
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
-        # Should I add javadoc:javadoc in here?
+        run: mvn -B package javadoc:javadoc --file pom.xml
 
     #// # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #// - name: Update dependency graph
