--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,9 @@ but when I do get one it will be here:
                 <version>3.11.2</version>
                 <configuration>
                     <show>private</show>
+                    <addStylesheets>
+                        <addStylesheet>dark_contrast.css</addStylesheet>
+                    </addStylesheets>
                     <tags>
                         <!--
                         ! Can someone please suggest how to make maven use a version of
