--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>conf</module>
+        <module>app</module>
     </modules>
 
 
@@ -120,7 +121,6 @@
                 </configuration>
             </plugin>
 
-            <!-- Not sure if i want this or not
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -134,7 +134,6 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
     </build>
 </project>
