--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,8 @@ updates:
   - package-ecosystem: "maven" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
+      interval: "daily"
+  - package-ecosystem: "maven" # And don't forget the bundles
+    directory: "/bundles/" # I think this will get all of them; if not I'll check if globbing works.
+    schedule:
       interval: "weekly"
