--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,9 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 50
   - package-ecosystem: "maven" # And don't forget the bundles
     directory: "/bundles/" # I think this will get all of them; if not I'll check if globbing works.
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 50
