Added test for the ConvertObjectToString method

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
             <version>5.12.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <!-- HOW TO BOX ARRAY -->
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.17.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
